logs/error-2023-04-13.log
2023-04-13T08:05:24.131Z [buyease-api] error: uncaughtException: Unexpected token '}'
/home/psychval/buyease/server/src/middlewares/controllers/loginController.js:27
            const user = await User.findOne({ email:  });
                                                      ^

SyntaxError: Unexpected token '}'
    at wrapSafe (internal/modules/cjs/loader.js:988:16)
    at Module._compile (internal/modules/cjs/loader.js:1036:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1101:10)
    at Module.load (internal/modules/cjs/loader.js:937:32)
    at Function.Module._load (internal/modules/cjs/loader.js:778:12)
    at Module.require (internal/modules/cjs/loader.js:961:19)
    at require (internal/modules/cjs/helpers.js:92:18)
    at Object.<anonymous> (/home/psychval/buyease/server/src/routes/authRoutes.js:3:19)
    at Module._compile (internal/modules/cjs/loader.js:1072:14)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1101:10)
